# amad-ai-construction-platform

./: .gitignore  .replit  BACKEND_API_FIXES_REPORT.md  DATABASE_RESTORATION_REPORT.md  DATASET_RESTORATION_COMPLETE.md  DATA_CONTENT_ANALYSIS.md  DATA_RECOVERY_INVESTIGATION_REPORT.md  DATA_SETUP.md  DESIGN_SYSTEM.md  GITHUB_RELEASE_READINESS.md  ORIGINAL_DATABASE_ANALYSIS.md  README.md  RESTORE_ORIGINAL_DATABASE.md  UX_AUDIT_ACTION_SUMMARY.md  UX_AUDIT_ARCHITECTURE.md  UX_AUDIT_V2.md  package.json  pnpm-lock.yaml  pyproject.toml  replit.md
backend/: .env.example  .gitignore  FINAL_API_VERIFICATION.py  alembic.ini  analyze_data_content.py  check_db_counts.py  check_existing_schema.py  check_meetings_columns.py  check_org_columns.py  clear_data.py  create_all_tables.py  create_schema_windows.py  fix_org_table.py  migrate_from_local_data.py  pyproject.toml  recreate_database.py  recreate_schema.py  recreate_subcontractor_tables.py  requirements.txt  run_server.py  trace_seed_source.py  verify_admin.py  verify_dataset.py  verify_restored_data.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_user_accounts.py  0003_add_b2b_foundation.py  0004_add_ai_copilot.py  (+6 more)
backend/app/: config.py  database.py  main.py  redis_client.py
backend/docs/: ai_architecture.md  architecture.md  b2b_saas_model.md  migration.md
backend/scripts/: migrate_sqlite.py  repair_demo_org_membership.py  seed_demo_data.py  seed_demo_data_corrected.py  seed_organizations.py  seed_users.py
backend/tests/: conftest.py  test_document_ocr.py
scripts/: dev.mjs  (+2 more)
(+189 files in other folders)
