[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "alembic==1.14.0",
    "anyio==4.8.0",
    "fastapi==0.115.7",
    "httpx==0.28.1",
    "passlib[bcrypt]==1.7.4",
    "pgvector==0.3.6",
    "psycopg2-binary==2.9.10",
    "pydantic-settings==2.7.0",
    "pytest==8.3.4",
    "pytest-asyncio==0.25.2",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.20",
    "redis==5.2.1",
    "sqlalchemy==2.0.36",
    "uvicorn[standard]==0.34.0",
]
