[project]
name = "construction-ai-backend"
version = "1.0.0"
description = "AI-Powered Construction Operations Intelligence Platform — FastAPI Backend"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
